# RasPiPico

./: README.mediawiki
C++/: How to Set Up Raspberry Pi Pico C-C++ Toolchain on Windows with VS Code - Shawn Hymel.url
C++/pico-sdk/: README.md
CircuitPython/: Libraries.url  Overview - Getting Started with Raspberry Pi Pico and CircuitPython - Adafruit Learning System.url  README.mediawiki
CircuitPython/CircuitPython_Code/: README.mediawiki
ELTerm-master/: zephray-ELTerm- ANSI-VT100-compatible serial terminal built with Raspberry Pi Pico and EL640.480-AM-AG screen.url
FreeRTOS-Kernel/: FreeRTOS - Quick start guide.url  FreeRTOS on RP2040 Boards (Pi Pico etc) using VSCode - Learn Embedded Systems.url  FreeRTOS-FreeRTOS-Kernel- FreeRTOS kernel files only, submoduled into https---github.com-FreeRTOS-FreeRTOS and various other .url
Pico16VGA/: Makefile.inc  Readme.txt  _d1.bat  _d2.bat  _e1.bat  d_all.bat  global.h
PicoGame Mini 00 - Construction Pack/: PicoGAME Mini.rtf
PicoMite_MMBASIC/: Geoff's Projects - BASIC Interpreter for the Raspberry Pi Pico.url  README.mediawiki  YouTube PicoMite- Running BASIC on a Raspberry Pi Pico - YouTube.url
PicoMite_MMBASIC/PicoMite-Source/PicoMite/: Audio.c  Audio.h  BmpDecoder.c  CFunction.c  CMakeLists.txt  Commands.c  Commands.h  Custom.c  Draw.c  Editor.c  Editor.h  External.c  External.h  FileIO.h  Font_8x6.h  Functions.c  Functions.h  GPS.c  GPS.h  GUI.c  I2C.c  Inconsola.h  MATHS.c  MMBasic.c  MMBasic.h  MMBasic_Includes.h  MM_Misc.c  MM_Misc.h  Memory.c  Memory.h  Onewire.c  Onewire.h  Operators.h  PS2Keyboard.h  SPI.c  SPI.h  Serial.c  Serial.h  Touch.h  Version.h  (+15 more)
PicoMite_MMBASIC/PicoMite_VGA/PicoMite-VGA-Edition/: CMakeLists.txt  Include.h  README.md
PicoQVGA/: Makefile.inc  Readme.txt  _c2.bat  global.h
PicoQVGA/eggs/: d.bat  (+1 more)
PicoVGA/: Makefile.inc  README.mediawiki  Readme.txt  _c1.bat  _e1.bat  c_all.bat
Pics/: PICO_SD_PROTO.csv
RC2040/: README.md  allophoneDefs.h  midiNotes.h
no-OS-FatFS-SD-SPI-RPi-Pico/: README.md  carlk3-no-OS-FatFS-SD-SPI-RPi-Pico- A FAT filesystem with SPI driver for SD card on Raspberry Pi Pico.url
pico-zxspectrum/: README.md  fruit-bat-pico-zxspectrum- ZX Spectrum for Raspberry Pico Pi RP2040.url
zeptoforth/: tabemann-zeptoforth- A not-so-small Forth for Cortex-M.url
(+1125 files in other folders)
